[package]
name = "gotham_serde_json_body_parser"
description = "JSON body parser for the Gotham web framework."
version = "0.2.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
repository = "https://github.com/ChristophWurst/gotham-serde-json-body-parser"
keywords = ["web", "gotham", "json"]
categories = ["web-programming", "parsing"]
license = "MIT"
readme = "README.md"

[dependencies]
failure = "^0.1"
futures = "^0.1"
gotham = "^0.2"
hyper = "^0.11"
mime = "^0.3"
serde = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
serde_derive = "^1.0"
